--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -234,7 +234,7 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Lift joylashgan manzil",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "Qisman texnik koʼrik sanasi",
+      "partialCheckDate": "O‘tkazilgan qisman texnik ko‘rik sanasi",
       "fullCheckDate": "Toʼliq texnik koʼrik sanasi",
       "sphere": "Soha",
       "liftingCapacity": "Yuk koʻtara olish quvvati (kg)",
@@ -247,7 +247,7 @@
       "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
       "expertisePath": "Ekspertiza loyihasi fayli",
       "installationCertPath": "Montaj guvohnomasi fayli",
-      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "additionalFilePath": "Qurilma pasporti",
       "hazardousFacilityId": "XICHOʻ",
       "childEquipmentId": "Kran turi",
       "factoryNumber": "Kranning zavod raqami",
@@ -255,7 +255,7 @@
       "factory": "Ishlab chiqargan zavod nomi",
       "location": "Geolokatsiya (X,Y)",
       "manufacturedAt": "Ishlab chiqarilgan sana",
-      "partialCheckDate": "Qisman texnik ko‘rik sanasi",
+      "partialCheckDate": "O‘tkazilgan qisman texnik ko‘rik sanasi (CHTO/PTO)",
       "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
       "boomLength": "Strelasining uzunligi (m)",
       "liftingCapacity": "Yuk koʻtara olish quvvati (tonna)",
@@ -271,7 +271,7 @@
       "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
       "expertisePath": "Ekspertiza loyihasi fayli",
       "installationCertPath": "Montaj guvohnomasi fayli",
-      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "additionalFilePath": "Qurilma pasporti",
       "phoneNumber": "Telefon raqami",
       "hazardousFacilityId": "XICHOʻ",
       "childEquipmentId": "Idish turi",
@@ -281,9 +281,9 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Idish joylashgan manzil",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "Tashqi va ichki ko‘rik sanasi",
-      "fullCheckDate": "Gidrosinov o‘tkazish sanasi",
-      "nonDestructiveCheckDate": "Putur yetkazmaydigan nazoratdan o‘tkazish sanasi",
+      "partialCheckDate": "O‘tkazilgan tashqi va ichki ko‘rik sanasi",
+      "fullCheckDate": "O‘tkazilgan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
+      "nonDestructiveCheckDate": "O‘tkaziladigan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
       "capacity": "Hajmi",
       "environment": "Muhit",
       "pressure": "Ruxsat etilgan bosim"
@@ -295,7 +295,7 @@
       "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
       "expertisePath": "Ekspertiza loyihasi fayli",
       "installationCertPath": "Montaj guvohnomasi fayli",
-      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "additionalFilePath": "Qurilma pasporti",
       "phoneNumber": "Telefon raqami",
       "hazardousFacilityId": "XICHOʻ",
       "childEquipmentId": "Qozon turi",
@@ -305,9 +305,9 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Qozon joylashgan manzil",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "Tashqi va ichki ko‘rik sanasi",
-      "fullCheckDate": "Gidrosinov o‘tkazish sanasi",
-      "nonDestructiveCheckDate": "Putur yetkazmaydigan nazoratdan o‘tkazish sanasi",
+      "partialCheckDate": "O‘tkazilgan tashqi va ichki ko‘rik sanasi",
+      "fullCheckDate": "O‘tkazilgan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
+      "nonDestructiveCheckDate": "O‘tkaziladigan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
       "capacity": "Hajmi",
       "environment": "Muhit",
       "pressure": "Ruxsat etilgan bosim"
@@ -319,7 +319,7 @@
       "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
       "expertisePath": "Ekspertiza loyihasi fayli",
       "installationCertPath": "Montaj guvohnomasi fayli",
-      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "additionalFilePath": "Qurilma pasporti",
       "phoneNumber": "Telefon raqami",
       "hazardousFacilityId": "XICHOʻ",
       "childEquipmentId": "Eskalator turi",
@@ -329,7 +329,7 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Eskalator joylashgan manzil",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "Qisman texnik ko‘rik sanasi",
+      "partialCheckDate": "O‘tkazilgan qisman texnik ko‘rik sanasi",
       "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
       "passengersPerMinute": "O‘tkazish qobiliyati, kishi/soat",
       "length": "Uzunligi",
@@ -343,7 +343,7 @@
       "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
       "expertisePath": "Ekspertiza loyihasi fayli",
       "installationCertPath": "Montaj guvohnomasi fayli",
-      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "additionalFilePath": "Qurilma pasporti",
       "phoneNumber": "Telefon raqami",
       "hazardousFacilityId": "XICHOʻ",
       "childEquipmentId": "Quvur turi",
@@ -353,9 +353,9 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Quvurning joylashgan manzili",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "Qisman texnik ko‘rik sanasi",
+      "partialCheckDate": "O‘tkazilgan qisman texnik ko‘rik sanasi",
       "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
-      "nonDestructiveCheckDate": "Putur yetkazmaydigan nazoratdan o‘tkazish sanasi",
+      "nonDestructiveCheckDate": "O‘tkaziladigan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
       "diameter": "Diametr, mm",
       "thickness": "Devor qalinligi, mm",
       "length": "Uzunligi, m",
@@ -369,7 +369,7 @@
       "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
       "expertisePath": "Ekspertiza loyihasi fayli",
       "installationCertPath": "Montaj guvohnomasi fayli",
-      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "additionalFilePath": "Qurilma pasporti",
       "phoneNumber": "Telefon raqami",
       "hazardousFacilityId": "XICHOʻ",
       "childEquipmentId": "Idish (kimyo) turi",
@@ -379,9 +379,9 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Idish joylashgan manzil",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "Tashqi va ichki ko‘rik sanasi",
-      "fullCheckDate": "Gidrosinov o‘tkazish sanasi",
-      "nonDestructiveCheckDate": "Putur yetkazmaydigan nazoratdan o‘tkazish sanasi",
+      "partialCheckDate": "O‘tkazilgan tashqi va ichki ko‘rik sanasi",
+      "fullCheckDate": "O‘tkazilgan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
+      "nonDestructiveCheckDate": "O‘tkaziladigan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
       "capacity": "Hajmi",
       "environment": "Muhit",
       "pressure": "Ruxsat etilgan bosim"
@@ -393,7 +393,7 @@
       "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
       "expertisePath": "Ekspertiza loyihasi fayli",
       "installationCertPath": "Montaj guvohnomasi fayli",
-      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "additionalFilePath": "Qurilma pasporti",
       "phoneNumber": "Telefon raqami",
       "hazardousFacilityId": "XICHOʻ",
       "childEquipmentId": "Bug‘ va issiq suv quvuri turi",
@@ -403,7 +403,7 @@
       "districtId": "Quvur joylashgan tuman",
       "address": "Quvurning joylashgan manzili",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "Qisman texnik ko‘rik sanasi",
+      "partialCheckDate": "O‘tkazilgan qisman texnik ko‘rik sanasi",
       "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
       "diameter": "Diametr, mm",
       "thickness": "Devor qalinligi, mm",
@@ -418,7 +418,7 @@
       "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
       "expertisePath": "Ekspertiza loyihasi fayli",
       "installationCertPath": "Montaj guvohnomasi fayli",
-      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "additionalFilePath": "Qurilma pasporti",
       "phoneNumber": "Telefon raqami",
       "hazardousFacilityId": "XICHOʻ",
       "childEquipmentId": "Qozon utilizator turi",
@@ -428,9 +428,9 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Qozon utilizatorining joylashgan manzili",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "Tashqi va ichki ko‘rik sanasi",
-      "fullCheckDate": "Gidrosinov o‘tkazish sanasi",
-      "nonDestructiveCheckDate": "Putur yetkazmaydigan nazoratdan o‘tkazish sanasi",
+      "partialCheckDate": "O‘tkazilgan tashqi va ichki ko‘rik sanasi",
+      "fullCheckDate": "O‘tkazilgan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
+      "nonDestructiveCheckDate": "O‘tkaziladigan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
       "capacity": "Hajmi",
       "environment": "Muhit",
       "pressure": "Ruxsat etilgan bosim",
@@ -444,7 +444,7 @@
       "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
       "expertisePath": "Ekspertiza loyihasi fayli",
       "installationCertPath": "Montaj guvohnomasi fayli",
-      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "additionalFilePath": "Qurilma pasporti",
       "phoneNumber": "Telefon raqami",
       "hazardousFacilityId": "XICHOʻ",
       "childEquipmentId": "Idish (SUG) turi",
@@ -454,9 +454,9 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Idishning (SUG) joylashgan manzili",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "Tashqi va ichki ko‘rik sanasi",
-      "fullCheckDate": "Gidrosinov o‘tkazish sanasi",
-      "nonDestructiveCheckDate": "Putur yetkazmaydigan nazoratdan o‘tkazish sanasi",
+      "partialCheckDate": "O‘tkazilgan tashqi va ichki ko‘rik sanasi",
+      "fullCheckDate": "O‘tkazilgan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
+      "nonDestructiveCheckDate": "O‘tkaziladigan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
       "capacity": "Hajmi",
       "environment": "Muhit",
       "pressure": "Ruxsat etilgan bosim"
@@ -469,7 +469,7 @@
       "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
       "expertisePath": "Ekspertiza loyihasi fayli",
       "installationCertPath": "Montaj guvohnomasi fayli",
-      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "additionalFilePath": "Qurilma pasporti",
       "phoneNumber": "Telefon raqami",
       "hazardousFacilityId": "XICHOʻ",
       "childEquipmentId": "Qurilma turi",
@@ -479,8 +479,8 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Qurilmaning joylashgan manzili",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "Tashqi va ichki ko‘rik sanasi",
-      "fullCheckDate": "Gidrosinov o‘tkazish sanasi",
+      "partialCheckDate": "O‘tkazilgan tashqi va ichki ko‘rik sanasi",
+      "fullCheckDate": "O‘tkazilgan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
       "capacity": "Sarflash miqdori, m³/soat",
       "pressure": "Bosim, mPa",
       "fuel": "Yoqilg‘i turi"
@@ -492,7 +492,7 @@
       "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
       "expertisePath": "Ekspertiza loyihasi fayli",
       "installationCertPath": "Montaj guvohnomasi fayli",
-      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "additionalFilePath": "Qurilma pasporti",
       "phoneNumber": "Telefon raqami",
       "hazardousFacilityId": "XICHOʻ",
       "childEquipmentId": "Yuk ko‘targich turi",
@@ -502,7 +502,7 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Yuk ko‘targichning joylashgan manzili",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "Qisman texnik ko‘rik sanasi",
+      "partialCheckDate": "O‘tkazilgan qisman texnik ko‘rik sanasi",
       "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
       "height": "Ko‘tarish balandligi",
       "liftingCapacity": "Yuk ko‘tarish qobiliyati"
@@ -514,7 +514,7 @@
       "assignmentDecreePath": "Masʼul shaxs tayinlanganligi to‘g‘risida buyruq fayli",
       "expertisePath": "Ekspertiza loyihasi fayli",
       "installationCertPath": "Montaj guvohnomasi fayli",
-      "additionalFilePath": "Qo‘shimcha maʼlumotlar",
+      "additionalFilePath": "Qurilma pasporti",
       "phoneNumber": "Telefon raqami",
       "hazardousFacilityId": "XICHOʻ",
       "childEquipmentId": "Osma yo‘l turi",
@@ -524,9 +524,9 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Osma yo‘lning joylashgan manzili",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "Qisman texnik ko‘rik sanasi",
+      "partialCheckDate": "O‘tkazilgan qisman texnik ko‘rik sanasi",
       "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
-      "nonDestructiveCheckDate": "Putur yetkazmaydigan nazoratdan o‘tkazish sanasi",
+      "nonDestructiveCheckDate": "O‘tkaziladigan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
       "speed": "Harakat tezligi",
       "passengerCount": "Yo‘lovchilar soni",
       "length": "Uzunligi"
