--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -47,6 +47,7 @@
   "checklist_file": "Cheklist fayli",
   "checklist_name_placeholder": "Cheklist nomini kiriting",
   "upload_pdf": "PDF fayl yuklash",
+  "oldRegistryNumber": "Eski ro‘yxat raqami",
   "risk_analysis_tabs": {
     "XICHO": "XICHO",
     "INM": "INM",
@@ -93,6 +94,7 @@
     "ATTESTATION": "Attestatsiya",
     "ATTESTATION_COMMITTEE": "Attestatsiya",
     "ATTESTATION_REGIONAL": "Attestatsiya",
+    "REPORT": "Hisobotlar",
     "RISK_ANALYSIS": "Xavf tahlil qilish",
     "INSPECTION": "Tekshiruvlar",
     "PREVENTION": "Profilaktika",
@@ -234,8 +236,8 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Lift joylashgan manzil",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "O‘tkazilgan qisman texnik ko‘rik sanasi",
-      "fullCheckDate": "Toʼliq texnik koʼrik sanasi",
+      "partialCheckDate": "O‘tkazilgan qisman (CHTO) yoki toʻliq texnik koʻrik (PTO) sanasi",
+      "fullCheckDate": "O‘tkaziladigan qisman (CHTO) yoki toʻliq texnik koʻrik (PTO) sanasi",
       "sphere": "Soha",
       "liftingCapacity": "Yuk koʻtara olish quvvati (kg)",
       "stopCount": "Toʼxtashlar soni"
@@ -255,14 +257,18 @@
       "factory": "Ishlab chiqargan zavod nomi",
       "location": "Geolokatsiya (X,Y)",
       "manufacturedAt": "Ishlab chiqarilgan sana",
-      "partialCheckDate": "O‘tkazilgan qisman texnik ko‘rik sanasi (CHTO/PTO)",
-      "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
+      "partialCheckDate": "O‘tkazilgan qisman (CHTO) yoki toʻliq texnik koʻrik (PTO) sanasi",
+      "fullCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "boomLength": "Strelasining uzunligi (m)",
       "liftingCapacity": "Yuk koʻtara olish quvvati (tonna)",
       "regionId": "Kran joylashgan viloyat",
       "districtId": "Kran joylashgan tuman",
       "address": "Kran joylashgan manzil",
-      "phoneNumber": "Telefon raqami"
+      "phoneNumber": "Telefon raqami",
+      "additionalInfoPath": "Qurilmani yaroqsiz holga kelganligini tasdiqlovchi hujjat",
+      "laboratoryReportPath": "Qurilma ishlashdan chiqqanligini tasdiqlovchi laboratoriya bayonnomasini",
+      "purchaseAgreementPath": "Sotib olish-sotish shartnomasi fayli",
+      "orderSuspensionPath": "Tashkilot faoliyati toʻxtatilganligi toʻgʻrisida buyruq"
     },
     "CONTAINER": {
       "labelPath": "Idishning birkasi bilan sur‘ati",
@@ -281,9 +287,9 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Idish joylashgan manzil",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "O‘tkazilgan tashqi va ichki ko‘rik sanasi",
-      "fullCheckDate": "O‘tkazilgan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
-      "nonDestructiveCheckDate": "O‘tkaziladigan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
+      "partialCheckDate": "O‘tkazilgan tashki (NO), ichki koʻrik (VO) yoki gidrosinov (GI) sanasi",
+      "fullCheckDate": "O‘tkaziladigan tashki (NO), ichki koʻrik (VO) yoki gidrosinov (GI) sanasi",
+      "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "capacity": "Hajmi",
       "environment": "Muhit",
       "pressure": "Ruxsat etilgan bosim"
@@ -305,9 +311,9 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Qozon joylashgan manzil",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "O‘tkazilgan tashqi va ichki ko‘rik sanasi",
-      "fullCheckDate": "O‘tkazilgan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
-      "nonDestructiveCheckDate": "O‘tkaziladigan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
+      "partialCheckDate": "O‘tkazilgan tashki (NO), ichki koʻrik (VO) yoki gidrosinov (GI) sanasi",
+      "fullCheckDate": "O‘tkaziladigan tashki (NO), ichki koʻrik (VO) yoki gidrosinov (GI) sanasi",
+      "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "capacity": "Hajmi",
       "environment": "Muhit",
       "pressure": "Ruxsat etilgan bosim"
@@ -329,8 +335,8 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Eskalator joylashgan manzil",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "O‘tkazilgan qisman texnik ko‘rik sanasi",
-      "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
+      "partialCheckDate": "O‘tkazilgan qisman (CHTO) yoki toʻliq texnik koʻrik (PTO) sanasi",
+      "fullCheckDate": "O‘tkaziladigan qisman (CHTO) yoki toʻliq texnik koʻrik (PTO) sanasi",
       "passengersPerMinute": "O‘tkazish qobiliyati, kishi/soat",
       "length": "Uzunligi",
       "speed": "Tezligi",
@@ -353,9 +359,9 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Quvurning joylashgan manzili",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "O‘tkazilgan qisman texnik ko‘rik sanasi",
-      "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
-      "nonDestructiveCheckDate": "O‘tkaziladigan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
+      "partialCheckDate": "O‘tkazilgan qisman (CHTO) yoki toʻliq texnik koʻrik (PTO) sanasi",
+      "fullCheckDate": "O‘tkaziladigan qisman (CHTO) yoki toʻliq texnik koʻrik (PTO) sanasi",
+      "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "diameter": "Diametr, mm",
       "thickness": "Devor qalinligi, mm",
       "length": "Uzunligi, m",
@@ -379,9 +385,9 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Idish joylashgan manzil",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "O‘tkazilgan tashqi va ichki ko‘rik sanasi",
-      "fullCheckDate": "O‘tkazilgan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
-      "nonDestructiveCheckDate": "O‘tkaziladigan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
+      "partialCheckDate": "O‘tkazilgan tashki (NO), ichki koʻrik (VO) yoki gidrosinov (GI) sanasi",
+      "fullCheckDate": "O‘tkaziladigan tashki (NO), ichki koʻrik (VO) yoki gidrosinov (GI) sanasi",
+      "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "capacity": "Hajmi",
       "environment": "Muhit",
       "pressure": "Ruxsat etilgan bosim"
@@ -403,8 +409,8 @@
       "districtId": "Quvur joylashgan tuman",
       "address": "Quvurning joylashgan manzili",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "O‘tkazilgan qisman texnik ko‘rik sanasi",
-      "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
+      "partialCheckDate": "O‘tkazilgan qisman (CHTO) yoki toʻliq texnik koʻrik (PTO) sanasi",
+      "fullCheckDate": "O‘tkaziladigan qisman (CHTO) yoki toʻliq texnik koʻrik (PTO) sanasi",
       "diameter": "Diametr, mm",
       "thickness": "Devor qalinligi, mm",
       "length": "Uzunligi, m",
@@ -428,9 +434,9 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Qozon utilizatorining joylashgan manzili",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "O‘tkazilgan tashqi va ichki ko‘rik sanasi",
-      "fullCheckDate": "O‘tkazilgan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
-      "nonDestructiveCheckDate": "O‘tkaziladigan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
+      "partialCheckDate": "O‘tkazilgan tashki (NO), ichki koʻrik (VO) yoki gidrosinov (GI) sanasi",
+      "fullCheckDate": "O‘tkaziladigan tashki (NO), ichki koʻrik (VO) yoki gidrosinov (GI) sanasi",
+      "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "capacity": "Hajmi",
       "environment": "Muhit",
       "pressure": "Ruxsat etilgan bosim",
@@ -454,9 +460,9 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Idishning (SUG) joylashgan manzili",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "O‘tkazilgan tashqi va ichki ko‘rik sanasi",
-      "fullCheckDate": "O‘tkazilgan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
-      "nonDestructiveCheckDate": "O‘tkaziladigan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
+      "partialCheckDate": "O‘tkazilgan tashki (NO), ichki koʻrik (VO) yoki gidrosinov (GI) sanasi",
+      "fullCheckDate": "O‘tkaziladigan tashki (NO), ichki koʻrik (VO) yoki gidrosinov (GI) sanasi",
+      "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "capacity": "Hajmi",
       "environment": "Muhit",
       "pressure": "Ruxsat etilgan bosim"
@@ -479,8 +485,8 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Qurilmaning joylashgan manzili",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "O‘tkazilgan tashqi va ichki ko‘rik sanasi",
-      "fullCheckDate": "O‘tkazilgan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
+      "partialCheckDate": "O‘tkazilgan tashki (NO), ichki koʻrik (VO) yoki gidrosinov (GI) sanasi",
+      "fullCheckDate": "O‘tkaziladigan tashki (NO), ichki koʻrik (VO) yoki gidrosinov (GI) sanasi",
       "capacity": "Sarflash miqdori, m³/soat",
       "pressure": "Bosim, mPa",
       "fuel": "Yoqilg‘i turi"
@@ -502,8 +508,8 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Yuk ko‘targichning joylashgan manzili",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "O‘tkazilgan qisman texnik ko‘rik sanasi",
-      "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
+      "partialCheckDate": "O‘tkazilgan qisman (CHTO) yoki toʻliq texnik koʻrik (PTO) sanasi",
+      "fullCheckDate": "O‘tkaziladigan qisman (CHTO) yoki toʻliq texnik koʻrik (PTO) sanasi",
       "height": "Ko‘tarish balandligi",
       "liftingCapacity": "Yuk ko‘tarish qobiliyati"
     },
@@ -524,9 +530,9 @@
       "manufacturedAt": "Ishlab chiqarilgan sana",
       "address": "Osma yo‘lning joylashgan manzili",
       "location": "Geolokatsiya (X,Y)",
-      "partialCheckDate": "O‘tkazilgan qisman texnik ko‘rik sanasi",
-      "fullCheckDate": "To‘liq texnik ko‘rik sanasi",
-      "nonDestructiveCheckDate": "O‘tkaziladigan tashqi, ichki ko‘rik (N/O, V/O) yoki gidrosinov (GI) sanasi",
+      "partialCheckDate": "O‘tkazilgan qisman (CHTO) yoki toʻliq texnik koʻrik (PTO) sanasi",
+      "fullCheckDate": "O‘tkaziladigan qisman (CHTO) yoki toʻliq texnik koʻrik (PTO) sanasi",
+      "nonDestructiveCheckDate": "Oxirgi o‘tkazilgan putur yetkazmaydigan nazorat sanasi",
       "speed": "Harakat tezligi",
       "passengerCount": "Yo‘lovchilar soni",
       "length": "Uzunligi"
