--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -88,6 +88,7 @@
     "ATTESTATION": "Attestatsiya",
     "ATTESTATION_COMMITTEE": "Attestatsiya",
     "ATTESTATION_REGIONAL": "Attestatsiya",
+    "REPORT": "Hisobotlar",
     "RISK_ANALYSIS": "Xavf tahlil qilish",
     "INSPECTION": "Tekshiruvlar",
     "PREVENTION": "Profilaktika",
