--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -54,6 +54,8 @@
     "INM": "INM",
     "LIFT": "Lift",
     "ATTRACTION": "Attraksion",
+    "XRAY": "Rentgen",
+    "LPG_POWERED": "Yiliga 100 ming va undan ortiq kubometr tabiiy gazdan foydalanuvchi qurilma",
     "NOT_ASSIGNED": "Inspektor belgilanmaganlar",
     "ASSIGNED": "Inspektor belgilanganlar"
   },
@@ -228,7 +230,21 @@
       "childEquipmentId": "Attraksion turi",
       "factoryNumber": "Attraksion zavod raqami",
       "factory": "Attraksionni ishlab chiqaruvchi zavod nomi",
-      "manufacturedAt": "Attraksion ishlab chiqarilgan sana"
+      "manufacturedAt": "Attraksion ishlab chiqarilgan sana",
+      "labelPath": "Attraksionning surati",
+      "passportPath": "Attraksion ishlab chiqaruvchisi tomonidan va (yoki) ixtisoslashtirilgan tashkilot tomonidan tayyorlangan attraksion pasporti",
+      "conformityCertPath": "Muvofiqlik sertifikati yoki muvofiqlik to‘g‘risidagi deklaratsiyaning nusxasi (2023 yil 28 maydan so‘ng muomalaga kiritilgan attraksionlar uchun - majburiy, qolgan attraksionlar uchun - mavjud bo‘lsa)",
+      "technicalJournalPath": "Kundalik texnik xizmat ko‘rsatish attraksion ishlari boshlanishidan oldin olib boriladi. Natijalar bo‘yicha attraksionlardan xavfsiz foydalanishga javobgar shaxs attraksionni kundalik foydalanishga ruxsat berganligi to‘g‘rida jurnali.",
+      "seasonalInspectionPath": "Mavsumiy foydalaniladigan attraksionlar to‘liq texnik shahodat sinovlaridan o‘tganligi to‘g‘risida ma’lumotlar",
+      "servicePlanPath": "Attraksionlarga davriy texnik xizmat ko‘rsatish attraksion egasi yoki attraksionni ijaraga olgan shaxs tomonidan tasdiqlangan reja-jadvali",
+      "seasonalReadinessActPath": "Bog‘ attraksionining mavsumga tayyorligi to‘g‘risidagi dalolatnomasi",
+      "technicalManualPath": "Texnik shahodat sinovlari attraksiondan foydalanish qo‘llanmasi va mazkur Qoidalar talablariga muvofiq attraksionlarni soz holatda saqlash va xavfsiz foydalanish uchun mas’ul bo‘lgan mutaxassis boshchiligida amalga oshiriladi. Mas’ul mutaxasis buyrug‘i",
+      "employeeSafetyKnowledgePath": "Bog‘ xodimlarning mehnatni muhofaza qilish bo‘yicha bilimlarini sinovdan o‘tganligi to‘g‘risida ma’lumot",
+      "usageRightsPath": "Ruxsatnoma",
+      "technicalReadinessActPath": "Attraksionlarning texnik tayyorligi dalolatnomasi ( yangi o‘rnatilgan 2023 yil 28 maydan so‘ng muomalaga kiritilgan attraksionlar uchun - majburiy, qolgan attraksionlar uchun - mavjud bo‘lsa)",
+      "preservationActPath": "Attraksionga video kuzatuv moslamasi o’rnatilganligi surati",
+      "cctvInstallationPath": "Attraksionlarning texnik tayyorligi dalolatnomasi ( yangi o‘rnatilgan 2023 yil 28 maydan so‘ng muomalaga kiritilgan attraksionlar uchun - majburiy, qolgan attraksionlar uchun - mavjud bo‘lsa)",
+      "qrPath": "Attraksionga QR kod axborot taxtachasiga o’rnatilganligi surati"
     },
     "HF": {
       "identificationCardPath": "Identifikatsiya varag‘i fayli",
@@ -255,17 +271,7 @@
       "spheres": "Tarmoqlar",
       "phoneNumber": "Telefon raqami",
       "email": "Elektron pochta manzili",
-      "labelPath": "Attraksionning surati",
-      "passportPath": "Attraksion ishlab chiqaruvchisi tomonidan va (yoki) ixtisoslashtirilgan tashkilot tomonidan tayyorlangan attraksion pasporti",
-      "conformityCertPath": "Muvofiqlik sertifikati yoki muvofiqlik to‘g‘risidagi deklaratsiyaning nusxasi (2023 yil 28 maydan so‘ng muomalaga kiritilgan attraksionlar uchun - majburiy, qolgan attraksionlar uchun - mavjud bo‘lsa)",
-      "technicalJournalPath": "Kundalik texnik xizmat ko‘rsatish attraksion ishlari boshlanishidan oldin olib boriladi. Natijalar bo‘yicha attraksionlardan xavfsiz foydalanishga javobgar shaxs attraksionni kundalik foydalanishga ruxsat berganligi to‘g‘rida jurnali.",
-      "seasonalInspectionPath": "Mavsumiy foydalaniladigan attraksionlar to‘liq texnik shahodat sinovlaridan o‘tganligi to‘g‘risida ma’lumotlar",
-      "servicePlanPath": "Attraksionlarga davriy texnik xizmat ko‘rsatish attraksion egasi yoki attraksionni ijaraga olgan shaxs tomonidan tasdiqlangan reja-jadvali",
-      "seasonalReadinessActPath": "Bog‘ attraksionining mavsumga tayyorligi to‘g‘risidagi dalolatnomasi",
-      "technicalManualPath": "Texnik shahodat sinovlari attraksiondan foydalanish qo‘llanmasi va mazkur Qoidalar talablariga muvofiq attraksionlarni soz holatda saqlash va xavfsiz foydalanish uchun mas’ul bo‘lgan mutaxassis boshchiligida amalga oshiriladi. Mas’ul mutaxasis buyrug‘i",
-      "employeeSafetyKnowledgePath": "Bog‘ xodimlarning mehnatni muhofaza qilish bo‘yicha bilimlarini sinovdan o‘tganligi to‘g‘risida ma’lumot",
-      "usageRightsPath": "Ruxsatnoma",
-      "technicalReadinessActPath": "Attraksionlarning texnik tayyorligi dalolatnomasi ( yangi o‘rnatilgan 2023 yil 28 maydan so‘ng muomalaga kiritilgan attraksionlar uchun - majburiy, qolgan attraksionlar uchun - mavjud bo‘lsa)"
+      "fireSafetyConclusionPath": "Yong‘in xavfsizligi xulosasi"
     },
     "ELEVATOR": {
       "labelPath": "Liftning birkasi bilan surʼati",
