--- a/src/app/i18-next/translations/uz/admin.json
+++ b/src/app/i18-next/translations/uz/admin.json
@@ -1,7 +1,7 @@
 {
   "sign_in": "Kirish",
   "sign_out": "Chiqish",
-  "admin_panel": "Ma'mur paneli",
+  "admin_panel": "Maʼmur paneli",
   "username": "Login",
   "password": "Parol"
 }
