--- a/src/app/i18-next/translations/uz/common.json
+++ b/src/app/i18-next/translations/uz/common.json
@@ -47,7 +47,7 @@
     "permits_authorization_documents": "Ruxsat etuvchi hujjatlar",
     "risk_analysis": "Xavfni tahlil qilish",
     "checklist_templates": "Cheklistlar",
-    "user-logs": "Harakatlari"
+    "user-logs": "Harakatlar"
   },
   "checklist_name": "Cheklist nomi",
   "categoryTypes": "Tekshiruv turlari",
