--- a/src/app/i18-next/translations/kr/accreditation.json
+++ b/src/app/i18-next/translations/kr/accreditation.json
@@ -1,5 +1,5 @@
 {
-  "accreditation": "Akkreditatsiya",
+  "accreditation": "Ekspertiza",
   "accreditation_applications": "Akkreditatsiya bo'yicha arizalar",
   "create_application": "Ariza yaratish",
   "applications_list": "Arizalar ro'yxati",
