--- a/src/app/i18-next/translations/kr/common.json
+++ b/src/app/i18-next/translations/kr/common.json
@@ -92,9 +92,9 @@
     "RISK_ANALYSIS": "Xavf tahlil qilish",
     "INSPECTION": "Tekshiruvlar",
     "PREVENTION": "Profilaktika",
-    "ACCREDITATION": "Akkreditatsiya",
+    "ACCREDITATION": "Ekspertiza",
     "CADASTRE": "Kadastr",
-    "PERMITS": "Ruxsat beruvchi hujjatlar"
+    "PERMITS": "Ruxsat etuvchi hujjatlar"
   },
   "application": {
     "OIL": "Нефт",
